Style is done for both body and h1

--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,31 @@ h1 {
 }
 
 /* Your CSS below here */
+body {
+  /* Fall back order here */
+  background: url("/img/top-image.png") top center no-repeat white;
+
+  /* Main backgrounds */
+  background: 
+    
+    url("/img/bottom-image.png") bottom center no-repeat,
+    url("/img/top-image.png") top center no-repeat, 
+      /* The 0.76 makes it so its not nearly as dark and makes it so its more easily readible*/
+    linear-gradient(0deg,rgba(0, 0, 0, 0.76) 1%, rgba(173, 173, 173, 1) 23%, rgba(255, 255, 255, 1) 50%, rgba(173, 173, 173, 1) 77%, rgba(0, 0, 0, .76) 99%),
+    white;
+
+  border-top: 1mm solid red;
+  border-bottom: 1mm solid red;
+}
+
+h1 {
+  /* background img/logo */
+  background: url("/img/logo.png") no-repeat center center;
+
+  /* Drop Shadow 1 - Filter*/
+  /*filter: drop-shadow(2px 8px 12px black);*/ /*-> I did test and it does work */
+
+  /* Drop Shadow 2 */
+  border-radius: 52%; /* Need this for the below shadow */
+  box-shadow:2px 8px 12px black;
+}
