--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body {
 article {
   margin: 20px auto;
   position: relative;
-    flex: 1; /* make both stretch equally */
+  flex: 1; /* make both stretch equally */
   padding: 1rem;
 }
 
@@ -69,4 +69,6 @@ h1 {
 .articles {
   display: flex;
   gap: 2rem; /* space between the articles */
+  padding-bottom: 120px; /* makes space so not hitting the border on bottom */
+  padding-top: 130px; /* makes space for logo at the top */
 }
